[package]
name = "panshi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = { version = "0.15" }
async-trait = "0.1"
once_cell = "1"
thiserror = "2"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
dashmap = "6.1"
config = "0.14"
regex = "1"
redis = { version = "0.27", features = ["tokio-rustls-comp", "json"] }
redis_pool = { version = "0.6", features = ["cluster"] }
axum_session = "0.14"
axum_session_redispool = { version = "0.3", features = ["redis-clusterdb"] }
colored = "2"
backtrace_printer = "1"