[package]
name = "panshi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = { version = "0.15" }
async-trait = "0.1"
thiserror = "2"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
dashmap = "6.1"
config = "0.14"
regex = "1"
redis = { version = "0.27", features = ["tokio-rustls-comp", "json"] }
redis_pool = { version = "0.6", features = ["cluster"] }
axum_session = "0.14"
axum_session_redispool = { version = "0.3", features = ["redis-clusterdb"] }
colored = "2"
backtrace_printer = "1"
tera = "1"
daemonize = "0.5.0"
sea-orm = { version = "1", features = ["sqlx-all", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "with-bigdecimal", "sea-orm-internal"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = [
    "trace",
    "catch-panic",
    "timeout",
    "add-extension",
    "cors",
    "fs",
    "set-header",
    "compression-full",
] }
http = "1"
thousands = "0.2"
byte-unit = "4"